# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: linters.yaml  tests.yaml
pre_commit_hooks/: sync_poetry_pre_commit.py  sync_ruff_version.py
pre_commit_hooks/utils/: poetry.py  pre_commit.py
tests/: test_poetry.py  test_pre_commit.py
